crates/reap-pm-live/tests/ui/aged_delivery_evidence_is_move_only.stderr
error[E0382]: use of moved value: `evidence`
 --> tests/ui/aged_delivery_evidence_is_move_only.rs:5:19
  |
3 | fn replay(evidence: PmAgedDeliveryEvidence) {
  |           -------- move occurs because `evidence` has type `PmAgedDeliveryEvidence`, which does not implement the `Copy` trait
4 |     let _first = evidence;
  |                  -------- value moved here
5 |     let _second = evidence;
  |                   ^^^^^^^^ value used here after move
