crates/reap-pm-live/tests/ui/aged_delivery_evidence_is_move_only.rs
use reap_pm_live::PmAgedDeliveryEvidence;

fn replay(evidence: PmAgedDeliveryEvidence) {
    let _first = evidence;
    let _second = evidence;
}

fn main() {}
